# vv_core_infer_onnx_simp_test

./: README.md  README.txt  analysis_report.md  pyproject.toml  run.py
model/yukarin_s/: duration.onnx
model/yukarin_sa/: intonation.onnx
model/yukarin_sosoa/: spectrogram.onnx
