[project]
name = "vv-core-inference-simple"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<1.26.4",
    "onnx==1.14.0",
    "onnxruntime==1.15.1",
    "soundfile==0.12.1",
]

[project.scripts]
vv-tts = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vv_core_inference"]
